# predicao-fila-frete-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  supabase_schema.sql
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  deploy.yml
data/synthetic/: README.md  sample_routes.csv
docker/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
docs/: DEPLOY_GUIDE.md  GOVERNANCA_IA.md  QA_RBAC_TEST_PLAN.md  QA_RETEST_BRIEF.md  QA_TEST_PLAN.md
infra/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_users.py  0003_alerts.py  0004_user_name.py  0005_enable_rls.py  0006_user_token_version.py  0007_roles.py  0008_copilot_config.py  0009_knowledge_base.py
scripts/: seed_demo_alerts.py  seed_demo_users.py  seed_synthetic_data.py  train_baseline_model.py
src/kairon/: __init__.py  main.py
src/kairon/alerts/: __init__.py  detectors.py  models.py  router.py  schemas.py  service.py
src/kairon/audit/: __init__.py  models.py  writer.py
src/kairon/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  metrics.py
src/kairon/explanation/: __init__.py  claude_client.py  config_router.py  copilot_config.py  guardrails.py  models.py  openai_client.py  router.py  schemas.py  service.py
src/kairon/explanation/prompts/: explain_prediction.j2  explain_with_question.j2  simulate_nl.j2
src/kairon/explanation/tests/: test_guardrails.py
src/kairon/ingestion/: __init__.py
src/kairon/ingestion/anp/: __init__.py  loader.py  models.py  normalizer.py  scraper.py
src/kairon/ingestion/flows/: __init__.py  anp_flow.py
src/kairon/ingestion/tests/: test_normalizer.py  test_scraper.py
src/kairon/knowledge/: embeddings.py  models.py  router.py  schemas.py  service.py
src/kairon/prediction/: __init__.py  db_models.py  features.py  ranking.py  router.py  routes_crud.py  schemas.py  service.py  shap_explainer.py
src/kairon/prediction/models/: __init__.py  baseline.py  lightgbm_residual.py  quantile.py
src/kairon/prediction/tests/: test_baseline.py
src/kairon/simulation/: __init__.py  monte_carlo.py  router.py
src/kairon/simulation/tests/: test_monte_carlo.py
src/kairon/tenant/: __init__.py  auth.py  models.py  permissions.py  ratelimit.py  roles_service.py  router.py  schemas.py  security.py  service.py
src/kairon/tenant/tests/: test_auth.py
tests/: conftest.py  test_guardrails.py
tests/e2e/: test_alerts.py  test_app_smoke.py  test_auth_and_isolation.py  test_auth_hardening.py  test_auth_register.py  test_diesel_override.py  test_predict_flow.py  test_product_endpoints.py  test_roles_rbac.py  test_routes_crud.py  test_users_profile_crud.py
ui/: app.py
ui/components/: api_client.py  sidebar.py
ui/pages/: 1_Consulta.py  2_Simulacao.py  3_Ranking.py  4_Alertas.py
web/: next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
web/app/(app)/: layout.tsx
web/app/(app)/alertas/: page.tsx
web/app/(app)/configuracoes/: page.tsx
web/app/(app)/consulta/: page.tsx
web/app/(app)/copiloto/: page.tsx
web/app/(app)/dashboard/: page.tsx
web/app/(app)/predicao/: page.tsx
web/app/(app)/previsao/: page.tsx
web/app/(app)/ranking/: page.tsx
web/app/(app)/rotas/: page.tsx
web/app/(app)/simulacao/: page.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/components/: auth-guard.tsx  kpi-card.tsx  page-header.tsx  segment-filter.tsx
web/components/charts/: freight-area-chart.tsx
web/components/shell/: app-shell.tsx  sidebar.tsx  topbar.tsx
web/lib/: api.ts  auth.tsx  csv.ts  format.ts  segments.ts
